# endgame

./: Cargo.toml  README.md  cbindgen.toml  config  config.make  flake.nix  main.c
.vim/: lspconfig.lua
include/: endgame.h
module/: config  ngx_http_endgame_module.c
nginx/: config  config.make
nginx/configer/: ccc  result
nginx/configer/objs/.cargo/: config.toml
old/: core.rs
src/: base64.rs  core.rs  dencrypt.rs  ffi.rs  lib.rs  main.rs  nginx.rs  oidc.rs  types.rs
src/ffi/: config.rs  mod.rs  runtime.rs  types.rs
src/oidc/: config.rs  mod.rs  runtime.rs  token.rs
src/oidc/ffi/: config.rs  runtime.rs  types.rs
src/types/: ffi.rs  io.rs  mod.rs  rust.rs
