[package]
name = "endgame"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = "1.0.100"
atomic_refcell = "0.1.13"
base64 = "0.22.1"
# TODO: Use from crates
crypter = { git = "https://github.com/m-lima/crypter", branch = "master" }
# TODO: Remove
openidconnect = { version = "4.0.1", features = ["reqwest-blocking"] }
percent-encoding = "2.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
# TODO: Remode
tracing = { version = "0.1.44", default-features = false }
# TODO: Remode
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["registry"] }
# TODO: Remode
treetrace = "0.1.1"
url = { version = "2.5.7", default-features = false }
