[package]
name = "endgame"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
atomic_refcell = "0.1.13"
base64 = "0.22.1"
crypter = "0.3.1"
libc = "0.2.180"
percent-encoding = "2.3.2"
rand = "0.9.2"
reqwest = { version = "0.13.1", default-features = false, features = [
  "default-tls",
  "form",
  "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
url = { version = "2.5.8", default-features = false, features = ["serde"] }
